--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 1px solid gold;
+} */
+
 body {
   font-family: 'Advent Pro', sans-serif;
 }
@@ -11,7 +15,7 @@ html {
 
 #homePage {
   background-image: url("https://res.cloudinary.com/dhj9oydvn/image/upload/v1597687733/background1_fyrsjl.jpg");
-  opacity: 0.7;
+  /* opacity: 0.7; */
   height: 100%;
   overflow: auto;
   background-position: center;
@@ -32,6 +36,7 @@ html {
   display: block;
   font-size: 86px;
   text-align: center;
+  color: #323232;
 }
 
 button {
@@ -53,7 +58,6 @@ button {
 
 #characterPage {
   background-image: url("https://res.cloudinary.com/dhj9oydvn/image/upload/v1597687733/background2_bzfaqf.jpg");
-  opacity: 0.7;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -61,20 +65,58 @@ button {
   position: relative;
 }
 
-/* #characterLookup {
-  text-align: center;
-  position: flex;
-  display: block;
-  /* margin-top: 15%; */
-/* align-items: center; */
-
-#results {
+#characterPageText {
   display: flex;
+  /* width: 75%; */
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+#selectAndSubmitDiv {
+  text-align: center;
+}
+
+#characterLookup {
+  text-align: center;
+  font-size: 72px;
+  color: #323232;
+}
+
+#resultsDiv {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  background-color: rgb(0, 0, 0, 0.3);
+  color: #FF8B94;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 35px;
+  padding-right: 25px;
+  font-size: 28px;
+  display: block;
+  flex-wrap: wrap;
+  border-radius: 10px;
+}
+
+#name,
+#gender,
+#eyeColor {
+  padding-left: 5px;
+  color: #dcedc1;
 }
 
 
 @media (max-width: 460px) {
   #title {
     font-size: 64px;
+  }
+
+  #characterPageText {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
   }
 }
