--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+  border: 1px solid gold;
+}
 .slide-in-fwd-center {
   -webkit-animation: slide-in-fwd-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation: slide-in-fwd-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -10,7 +13,7 @@ body {
 
 body,
 html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 
 }
@@ -55,7 +58,7 @@ button {
 
 #characterPage {
   background-image: url("https://res.cloudinary.com/dhj9oydvn/image/upload/v1598024003/background2whitewashonline_ztqyfc.png");
-  height: 100vh;
+  /* height: 100vh; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,8 +101,9 @@ button {
   padding-left: 35px;
   padding-right: 5px;
   font-size: 28px;
-  display: block;
-  flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
   border-radius: 10px;
 }
 
@@ -125,16 +129,19 @@ button {
 }
 
 #scrollUp{
-  width:80px;
-  /* display: flex; */
-  align-items: right;
+  width: 100%x;
+  display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding-right: 1.8em;
+  --contentHeight: 75px;
+  align-items: center;
+    
 }
 
 #scrollUpIcon{
   height: 2em;
+  max-height: var(--contentHeight);
 }
 
 
