--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
+/* *{
   border: 1px solid gold;
-}
+} */
 .slide-in-fwd-center {
   -webkit-animation: slide-in-fwd-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation: slide-in-fwd-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -20,7 +20,7 @@ html {
 
 #homePage {
   background-image: url("https://res.cloudinary.com/dhj9oydvn/image/upload/v1598023647/background1whitewashonline_luyuxh.png");
-  height: 100%;
+  height: 100vh;
   overflow: auto;
   background-position: center;
   background-repeat: no-repeat;
@@ -92,8 +92,8 @@ button {
 #resultsDiv {
   width: 35%;
   margin: 0 auto;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 3%;
+  margin-bottom: 3%;
   background-color: rgb(0, 0, 0, 0.3);
   color: #FF8B94;
   padding-top: 25px;
@@ -129,24 +129,33 @@ button {
 }
 
 #scrollUp{
-  width: 100%x;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding-right: 1.8em;
   --contentHeight: 75px;
-  align-items: center;
+  align-items: flex-end;
+
     
 }
 
-#scrollUpIcon{
-  height: 2em;
+#scrollUpIcons{
+  display: flex;
+  flex-direction: column;
+  padding-right: 20px;
+  /* padding-bottom:15px; */
+  width: 3em;
+}
+
+#scrollUpArrow{
+  height: 3em;
   max-height: var(--contentHeight);
+  opacity: 70%;
 }
 
 
 #totoroTransparent1{
-  height: 3.5em;
+  height: 3em;
   /* display: flex; */
   /* align-items: right; */
 }
