--- a/style.css
+++ b/style.css
@@ -147,6 +147,12 @@ button {
   width: 3em;
 }
 
+#scrollUpIcons:hover,
+#scrollUpIcons:focus,
+#scrollUpIcons:active {
+    transform: scale(1.1);
+}
+
 #scrollUpArrow{
   height: 3em;
   max-height: var(--contentHeight);
